Thesis/force-app/main/default/objects/Delivery__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <formula>Shelter__r.ShelterCountry__c + &quot;, &quot; +  Shelter__r.ShelterCity__c + &quot;, &quot; +  Shelter__r.ShelterPostalCode__c + &quot;, &quot; +  Shelter__r.ShelterStreet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery address</label>
    <type>Text</type>
</CustomField>