Thesis/force-app/main/default/objects/Delivery__c/fields/DeliveryCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCode__c</fullName>
    <displayFormat>DLV-{0000}</displayFormat>
    <label>Delivery code</label>
    <type>AutoNumber</type>
</CustomField>