Thesis/force-app/main/default/objects/Delivery__c/fields/DeliveryCost__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCost__c</fullName>
    <label>Delivery cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>