Thesis/force-app/main/default/objects/Delivery__c/fields/Shelter__c.field-meta.xml
<CustomField>
    <fullName>Shelter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shelter</label>
    <referenceTo>Shelter__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>