Thesis/force-app/main/default/objects/Delivery__c/fields/Summarize__c.field-meta.xml
<CustomField>
    <fullName>Summarize__c</fullName>
    <formula>DeliveryCost__c +  Total_cost_of_products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summarize</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>