Thesis/force-app/main/default/objects/Delivery__c/fields/Total_cost_of_products__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_of_products__c</fullName>
    <label>Total cost of products</label>
    <summarizedField>DeliveryDetails__c.TotalCostDeliveryDetails__c</summarizedField>
    <summaryForeignKey>DeliveryDetails__c.Delivery__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>